Fixes #94
A user reported that the footer sometimes overlapped the content.

I replaced the fixed height of the product thumbnail with some bottom
padding and that seems to have addressed the issue!

--- a/django/static/css/css.css
+++ b/django/static/css/css.css
@@ -104,7 +104,8 @@ div.product_thumbnail{
 	text-align: center;
 	float: left;
 	width: 150px;
-	height: 200px;
+	/* height: 200px; */
+	padding-bottom: 20px;
 }
 /* product page styles */
 div.product_image{
